--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
       </div>
       <div class="home-img">
-          <img src="images/dpmayank.jpg" alt="MY-IMAGE" />
+          <img src="dpmayank.jpg" alt="MY-IMAGE" />
       </div>
     </section>
 
@@ -55,7 +55,7 @@
          <!--About-->    
     <section class="about" id="about">
       <div class="about-img">
-      <img src="images/dpmayank.jpg" alt="MY-IMAGE" />
+      <img src="dpmayank.jpg" alt="MY-IMAGE" />
 
         </div>
 
@@ -126,14 +126,14 @@
 
       <div class="portfolio-container">
         <div class="portfolio-box">
-<img src="images/portfolio6.jpg" alt="PROJECT-IMG" border="0">            <div class="portfolio-layer">
+<img src="portfolio6.jpg" alt="PROJECT-IMG" border="0">            <div class="portfolio-layer">
               <h4>Graphical Password</h4>
               <p>Graphical Password Authentication [soon to be uploaded]</p>
               <a href=" "><i class='bx bx-link-external'></i></a>
             </div>
           </div>
           <div class="portfolio-box">
-        <img src="images/portfolio1 (1).jpg" alt="PROJECT-IMG" border="0" />
+        <img src="portfolio1 (1).jpg" alt="PROJECT-IMG" border="0" />
             <div class="portfolio-layer">
               <h4>Landing Page</h4>
               <p>Landing Page for Show Booking using HTML , CSS & JavaScript </p>
@@ -141,7 +141,7 @@
             </div>
           </div>
           <div class="portfolio-box">
-   <img src="images/portfolio2.jpg" alt="PROJECT-IMG" border="0" />
+   <img src="portfolio2.jpg" alt="PROJECT-IMG" border="0" />
             <div class="portfolio-layer">
               <h4>Website Design</h4>
               <p>Hi This is my web Design</p>
@@ -149,7 +149,7 @@
             </div>
           </div>
           <div class="portfolio-box">
-           <img src="images/portfolio3.jpg" alt="PROJECT-IMG" />
+           <img src="portfolio3.jpg" alt="PROJECT-IMG" />
             <div class="portfolio-layer">
               <h4>Web Design</h4>
               <p>Hi This is my web Design</p>
@@ -157,7 +157,7 @@
             </div>
           </div>
           <div class="portfolio-box">
-         <img src="images/portfolio4.jpg" alt="PROJECT-IMG" />
+         <img src="portfolio4.jpg" alt="PROJECT-IMG" />
             <div class="portfolio-layer">
               <h4>Web Design</h4>
               <p>Hi This is my web Design</p>
@@ -165,7 +165,7 @@
             </div>
           </div>
           <div class="portfolio-box">
-           <img src="images/portfolio5.jpg" alt="PROJECT-IMG" />
+           <img src="portfolio5.jpg" alt="PROJECT-IMG" />
             <div class="portfolio-layer">
               <h4>Web Design</h4>
               <p>Hi This is my web Design</p>
