--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="https://github.com/mayank123hangsh00" target="_blank"><i class='bx bxl-github' ></i></a>
         </div>
         <a href='#' class="btn-cv-res" >Download CV</a>
-        <a href="https://drive.google.com/file/d/19lBks7h26MP5bdCkQQrs6MUQFpIu1RAJ/view?usp=drive_link" class="btn-cv-res" target="_blank">Download Resume</a>
+        <a href="https://drive.google.com/file/d/1ED2Hx1fdhLrB15Asom3UX4nJKp-fqezz/view?usp=sharing" class="btn-cv-res" target="_blank">Download Resume</a>
         
       </div>
       </div>
@@ -127,8 +127,8 @@
       <div class="portfolio-container">
         <div class="portfolio-box">
 <img src="portfolio6.jpg" alt="PROJECT-IMG" border="0">            <div class="portfolio-layer">
-              <h4>Graphical Password</h4>
-              <p>Graphical Password Authentication [soon to be uploaded]</p>
+              <h4>Travel planning Website</h4>
+              <p>Travel planning website [soon to be uploaded]</p>
               <a href=" "><i class='bx bx-link-external'></i></a>
             </div>
           </div>
