--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="https://github.com/mayank123hangsh00" target="_blank"><i class='bx bxl-github' ></i></a>
         </div>
         <a href='#' class="btn-cv-res" >Download CV</a>
-        <a href="https://drive.google.com/file/d/1ED2Hx1fdhLrB15Asom3UX4nJKp-fqezz/view?usp=sharing" class="btn-cv-res" target="_blank">Download Resume</a>
+        <a href="https://drive.google.com/file/d/1gj-R_3GUC5BFbKY85o8HGKQOybTk1kvn/view" class="btn-cv-res" target="_blank">Download Resume</a>
         
       </div>
       </div>
@@ -129,7 +129,7 @@
 <img src="portfolio6.jpg" alt="PROJECT-IMG" border="0">            <div class="portfolio-layer">
               <h4>Travel planning Website</h4>
               <p>Travel planning website [soon to be uploaded]</p>
-              <a href=" "><i class='bx bx-link-external'></i></a>
+              <a href=" https://github.com/mayank123hangsh00/MAJOR-PROJECT"><i class='bx bx-link-external'></i></a>
             </div>
           </div>
           <div class="portfolio-box">
@@ -167,9 +167,9 @@
           <div class="portfolio-box">
            <img src="portfolio5.jpg" alt="PROJECT-IMG" />
             <div class="portfolio-layer">
-              <h4>Web Design</h4>
-              <p>Hi This is my web Design</p>
-              <a href="#"><i class='bx bx-link-external'></i></a>
+              <h4>AI Resume Builder</h4>
+              <p>Hi This is my Resume Builder Platform</p>
+              <a href="https://github.com/mayank123hangsh00/AI-RESUME-BUILDER"><i class='bx bx-link-external'></i></a>
             </div>
           </div>
         </div>
